2006-03-27  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doXConfig):  Don't write out
	a blank xconfig line.

2006-03-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.__init__):  Reorder output
	handlers.

2006-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doZeroMbr):  Backwards
	compatibility support for options to zerombr.

2006-02-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doIgnoreDisk):  Get ksdata
	from the correct option parser variable (#182934).

2006-02-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-02-16  Chris Lumens  <clumens@redhat.com>

	* docs/programmers-guide:  Update documentation.

	* pykickstart/parser.py:  Provide an option to not traceback if an
	included file is not present.  This should have very limited
	usefulness.  (#181760).
	* pykickstart/parser.py (KSOptionParser.check_values):  Typos.

2006-02-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py:  Don't trust ensure_value in complicated
	cases in callbacks, as it wasn't setting values.

2006-02-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doNetwork):  --onboot
	requires a value (#180987).

2006-02-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Be more strict about commands that don't
	take any arguments.

2006-02-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py, pykickstart/writer.py:  Fix pychecker
	warnings.

	* pykickstart/parser.py (KSOption):  Condense all those option classes
	into a single one.
